tests/NormalTests/paczka1/fuzzy1/38796880.err
Error in line 3: ejlG5im S610 99,8
Error in line 7: A479 S610 35,5
Error in line 10: ejlG5im A479 7,0
Error in line 17: PYbB S451 100,0
Error in line 9: Ourg7fQ S610 67,6
Error in line 24: Ourg7fQ A479 71,1
Error in line 26: A479 A479 14,6
Error in line 29: A479 S476 91,9
